Changed background color to fix contrast issues

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ form > button {
 }
 
 .project-button:hover {
-  background-color: #191765;
+  background-color: #000000;
   /*background-color: #e5e5e5;*/
 }
 
